# noir-trie-proofs

./: .gitignore  Cargo.toml  Nargo.toml  README.md
.github/: CODEOWNERS
.github/workflows/: test.yaml
lib/: Nargo.toml
lib/src/: const.nr  lib.nr  node.nr  node_test.nr  node_utils.nr  node_utils_test.nr  receipt_proof.nr  receipt_proof_test.nr  rlp.nr  state_proof.nr  state_proof_test.nr  storage_proof.nr  storage_proof_test.nr  test.nr  trie_proof.nr  utils.nr  utils_test.nr
src/: bin.rs  lib.nr  lib.rs  rlp.nr
tests/depth_8/: Nargo.toml  Prover.toml
tests/depth_8/src/: main.nr
tests/depth_8_state_proof/: Nargo.toml  Prover.toml
tests/depth_8_state_proof/src/: main.nr
tests/depth_8_storage_proof/: Nargo.toml  Prover.toml
tests/depth_8_storage_proof/src/: main.nr
tests/one_level/: Nargo.toml  Prover.toml
tests/one_level/src/: main.nr
tests/rlp_decode/: Nargo.toml  Prover.toml
tests/rlp_decode/src/: main.nr
